--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -225,7 +225,7 @@ Another challenge in detecting the fall is that it is difficult for a system to 
 \section{Objectives}
 From above challenges, it is necessary to study and design a wireless sensor network which can automatically detect the fall of patient and send alarm to the caregiver instantly to reduce their time of arrival, and hence reduce mortality rate. The sensor node is portable and attached on the chest of user. This sensor node contains one accelerometer and one gyroscope to provide information about the body's acceleration and angular velocity during the fall event. This sensor node can connect to the host computer via Wi-Fi with the help of Wi-Fi module called ESP8266 from ESPRESSIF\textregistered company and send data directly to a monitoring software on the computer. Upon detecting a fall, sensor node will wait for the safe signal from patient within next 10 minutes. If there is no response, an emergency email will be sent immediately to the caregiver. There is also a super bright red led on the sensor node to indicate the fall and help caregiver to easily find out the patient. 
 \section{Thesis Organization}
-In chapter 1, basic knowledge about falls as well as the causes and consequences of them are introduced. It is also provides the information about current challenges in detecting fall and motivation for this thesis. In chapter 2, a review of existing commercial fall detection devices in the market and researches related to this topic from  other research group. Chapter 3 describes the problem of fall detection and method to solve this problem. Also in this chapter is the description of algorithm used in this thesis. Chapter 4 describes the system with both hardware and software aspects. Chapter 5 and 6 describe the data collection and analysis procedure and result assessment of the experiments on real human body as well. Finally, chapter 7 gives the conclusion for this thesis, limitation of current solution and recommendation for future works.
+In chapter 1, basic knowledge about falls as well as the causes and consequences of them are introduced. It is also provides the information about current challenges in detecting fall and motivation for this thesis. In chapter 2, a review of existing commercial fall detection devices in the market and researches related to this topic from  other research group is included. Chapter 3 describes the problem of fall detection and method to solve this problem. Also in this chapter is the description of algorithm used in this thesis. Chapter 4 describes the system with both hardware and software aspects. Chapter 5 and 6 describe the data collection and analysis procedure as well as result assessment of the experiments on real human body. Finally, chapter 7 gives the conclusion for this thesis, limitation of current solution and recommendation for future works.
 %======================================================================
 \chapter{Literature Review}
 
