--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -228,9 +228,23 @@ From above challenges, it is necessary to study and design a wireless sensor net
 In chapter 1, basic knowledge about falls as well as the causes and consequences of them are introduced. It is also provides the information about current challenges in detecting fall and motivation for this thesis. In chapter 2, a review of existing commercial fall detection devices in the market and researches related to this topic from  other research group is included. Chapter 3 describes the problem of fall detection and method to solve this problem. Also in this chapter is the description of algorithm used in this thesis. Chapter 4 describes the system with both hardware and software aspects. Chapter 5 and 6 describe the data collection and analysis procedure as well as result assessment of the experiments on real human body. Finally, chapter 7 gives the conclusion for this thesis, limitation of current solution and recommendation for future works.
 %======================================================================
 \chapter{Literature Review}
-
+Nowadays, there are a lot of companies focusing on developing portable fall detection devices to suffice the need of current society where there are more and more elderly people fall every day. These products are used widely by many people around the world and have positive effects on health-care systems of these countries. Beside that, numerous universities and research groups carried out studies on the topic of fall detection from various perspectives and have great contributions to the evolution of health monitoring services.  
 \section{Existing Commercial Devices}
+One popular fall detection device, which is highly evaluated by customers, is the Medical Fall Alert in the \textit{Home Guardian} option from Medical Guardian\textregistered. It is designed in form of a lightweight wearable neck pendant. This pendant is waterproof and small enough that have no disturbance on user's daily activity. Medical Guadian\textregistered provides a home system including one base unit connecting to the monitoring station through landline and one auto-alert pendant on user body. Whenever detecting a fall, the wearable pendant will send a signal to the base unit and the base station will announce \textit{"Fall Detected, Press or Hold Button to Cancel"}. If the patient actual need help, do not press the button. Then, the system will connect to operators at the monitoring center, they will ask if patient need help or not. If the patient cannot speak because of unconsciousness, the operators will automatically send emergency services to patient's home. The monthly fee for this service is around \$44.95 per month and it is used inside the \gls{us}.
 
+ \begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.7]{medical-guardian-fall-alert-system}
+	\caption{Medical Guardian Fall Alert Syste}
+\end{figure}
+  
+Another device on the market is myHalo\texttrademark from MobileHelp\texttrademark. This device has more advantages compared to Medical Guadian one because of full body monitoring functions. It can detect a fall, mornitoring heart rate, skin temperature, sleep/wake pattern, etc. and send alert signal to the authorized contacts. This product supports the medical alert outside the home powered by nationwide cellular network and do not require landline phones. It also provides precise location of patients when they go outside. This enable emergency call center to pinpoint patients' location and direct medical support to them. This service costs from \$41.95 per month and support 24/7. However, because this system offers so many features, it seems to less focus on the fall detection. 
+
+ \begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.5]{mobile-help}
+	\caption{myHalo Medical Alert System from MobileHelp\texttrademark}
+\end{figure}
 \section{Existing Products from Other Research Groups}
 
 
