--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -235,7 +235,7 @@ One popular fall detection device, which is highly evaluated by customers, is th
  \begin{figure}[h!]
 	\centering
 	\includegraphics[scale=0.7]{medical-guardian-fall-alert-system}
-	\caption{Medical Guardian Fall Alert Syste}
+	\caption{Medical Guardian Fall Alert System}
 \end{figure}
   
 Another device on the market is myHalo\texttrademark from MobileHelp\texttrademark. This device has more advantages compared to Medical Guadian one because of full body monitoring functions. It can detect a fall, mornitoring heart rate, skin temperature, sleep/wake pattern, etc. and send alert signal to the authorized contacts. This product supports the medical alert outside the home powered by nationwide cellular network and do not require landline phones. It also provides precise location of patients when they go outside. This enable emergency call center to pinpoint patients' location and direct medical support to them. This service costs from \$41.95 per month and support 24/7. However, because this system offers so many features, it seems to less focus on the fall detection. 
@@ -245,8 +245,17 @@ Another device on the market is myHalo\texttrademark from MobileHelp\texttradema
 	\includegraphics[scale=0.5]{mobile-help}
 	\caption{myHalo Medical Alert System from MobileHelp\texttrademark}
 \end{figure}
-\section{Existing Products from Other Research Groups}
 
+\section{Existing Products from Other Research Groups}
+Beside many commercial fall detection devices being available on the market, there are still many products from different research groups surrounding the fall detection topic. A group of Qiang Li and colleagues have used TEMPO (Technology-Enabled Medical Precision Observation) 3.0 sensor node for their project. This sensor node contains one tri-axial accelerometer and one tri-axial gyroscope and controlled by an TI MSP430F1611 microcontroller. This group proposed an algorithm which combines the data from both accelerometer and gyroscope to reduce both false positive and false negative detection and improving the fall detection accuracy. This system is low computational requirements and real-time response. The authors stated that their method has difficulties in differentiating jumping into bed and falling against wall with a seated posture. 
+
+ \begin{figure}[h!]
+	\centering
+	\includegraphics{tempo}
+	\caption{TEMPO 3.0 sensor node}
+\end{figure}
+
+Another research of Binh Nguyen and Tomkun 
 
 \chapter{Statement of Problem and Methodology}
 
