complete_literature_review

--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -255,7 +255,13 @@ Beside many commercial fall detection devices being available on the market, the
 	\caption{TEMPO 3.0 sensor node}
 \end{figure}
 
-Another research of Binh Nguyen and Tomkun 
+Binh Nguyen and Jonathan Tomkun designed and created a fall detection system for the elderly as a wearable monitoring device which can distinguish between fall and non-fall events. This device can link wirelessly with a pre-programmed laptop computer or Bluetooth-compitable mobile phone. Upon detecting a fall, the device communicates wirelessly with the laptop or cellphone to call 911 or issued emergency contacts. This device can also detect abnormal tilt and warns the user to correct their posture to minimize the risk of falling. In addition to visual LED to alert the fall, there are also audio and tacticle alert options for people with hearing or seeing disabilities. Regarding the performance of system, some actions have not been distinguished by one of four proposed algorithm to be falls or non-falls. 
+
+ \begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.7]{binhnguyen_device}
+	\caption{The final design of device from group research of Binh Nguyen and Jonathan Tomkun}
+\end{figure}  
 
 \chapter{Statement of Problem and Methodology}
 
