--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -262,4 +262,56 @@
   year    = {2003},
 }
 
+@Misc{,
+}
+
+@Article{only_accel_1,
+  author  = {Weihao Qu, Feng Lin, Aosen Wang, Wenyao Xu},
+  title   = {Evaluation of a Low-complexity Fall Detection Algorithm on Wearable Sensor towards Falls and Fall-alike Activities},
+  journal = {Gait Posture},
+  year    = {2008},
+  month   = aug,
+}
+
+@Article{only_accel_2,
+  author    = {Bourke, Alan and O'Brien, J.V. and ÓLaighin, Gearóid},
+  title     = {Evaluation of A threshold-based tri-axial accelerometer},
+  year      = {2006},
+  volume    = {26},
+  pages     = {194-199},
+  month     = {01},
+  booktitle = {J Gait and Posture},
+}
+
+@Article{only_accel_3,
+  author  = {Dean M. Karantonis, Nigel H. Lovell},
+  title   = {Implementation of a Real-Time Human Movement Classifier Using a Triaxial Accelerometer for Ambulatory Monitoring},
+  journal = {IEEE TRANSACTIONS ON INFORMATION TECHNOLOGY IN BIOMEDICINE},
+  year    = {2006},
+  volume  = {10},
+  number  = {1},
+  month   = jan,
+}
+
+@InProceedings{body_orientation_1,
+  author    = {L. H. Nair and Ragimol},
+  title     = {AHRS based body orientation estimation for real time fall detection},
+  booktitle = {2017 International Conference on Innovations in Information, Embedded and Communication Systems (ICIIECS)},
+  year      = {2017},
+  pages     = {1-4},
+  month     = {March},
+  doi       = {10.1109/ICIIECS.2017.8275884},
+  keywords  = {accelerometers;geriatrics;gyroscopes;magnetometers;medical signal detection;medical signal processing;AHRS based body orientation estimation;time fall detection;AHRS system;body fall;elderly people;accelerometer;gyroscope;magnetometer;ARM processor;sensors;Senior citizens;Accelerometers;Gyroscopes;Acceleration;Magnetic sensors;Magnetometers;Adhoc data fusion;AHRS;gyroscope;wearable sensors},
+}
+
+@InProceedings{body_orientation_2,
+  author    = {Jay Chen, Karric Kwong, Dennis Chang, Jerry Luk, Ruzena Bajcsy},
+  title     = {Wearable Sensors for Reliable Fall Detection},
+  booktitle = {Proceedings of the 2005 IEEE},
+  year      = {2005},
+  address   = {Shanghai, China},
+  month     = sep,
+  publisher = {Engineering in Medicine and Biology 27th Annual Conference},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
