sensor placement second draft

--- a/Final_thesis/uw-ethesis.tex
+++ b/Final_thesis/uw-ethesis.tex
@@ -322,9 +322,10 @@ algorithm.
 	\caption{Fall detection algorithm}
 \end{figure*}
 \cleardoublepage
-\subsection{Position of sensor}
+\subsection{Sensor Placement}
 Until now, there have been a lot of works on developing new algorithms for the falls detection system, with the help of advance techniques in machine learning and computational areas. However, these researches still lack a study that determines the best sensor placement on the patient's body. When the most optimized place is found, fall detection device can be better designed to archive more accuracy. \par 
-Bao \textit{et al.} has used five accelerometers and asked 20 volunteers, with the ages between 17 and 48, to wear these sensors on different parts of bodies including hip, wrist, ankle, arm and thick. The final results show that thigh is the most suitable place for attaching sensor on patient's body which result in 
+Bao \textit{et al.} \cite{sensor_position_1} has used five accelerometers and asked 20 volunteers, with the ages between 17 and 48, to wear these sensors on different parts of bodies including hip, wrist, ankle, arm and thick. The final results show that thigh and wrist is the most suitable place for attaching sensor on patient's body which result in 84\% overall success of the system. 
+However, in another research of Kangas \textit{et al.} \cite{sensor_position_2}, they have measured the performance of system with three sensors at different position on human body. The result is that waist sensor sensitivity varies from 76\% to 97\%, head sensor sensitivity is from 47\% to 98\% and finally, wrist sensor sensitivity varies from 37\% to 71\%. From this result, they concluded that fall detection using sensor worn at the waist or head is efficient, with the sensitivity of 97-98\% and specificity of 100\%. The research of Ntanasis \textit{et al.} \cite{sensor_position_3} on sensor location for wearable fall detection device, with five different classification techniques, has pointed out that waist and thigh sensor positive achieve the highest accuracy for all classifier and followed by chest and ankle.    
 \chapter{System overview}
 
 \section{System Components}
